now more endpoints in the API
